compiler/tests/success/typing/arm-m4/return.jazz
export fn fake_truncate(reg u32 arg) -> reg u8 {
  return arg;
}
