compiler/tests/fail/register_allocation/arm-m4/bug_201.jazz
export
fn main (reg u64 state)  {
}
